--- a/api/package.json
+++ b/api/package.json
@@ -30,16 +30,18 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@nestjs/cache-manager": "^1.0.0",
-    "@nestjs/common": "^9.4.0",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.4.0",
-    "@nestjs/jwt": "^10.0.3",
-    "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.4.0",
+    "@nest-middlewares/csurf": "^10.0.0",
+    "@nest-middlewares/helmet": "^10.0.0",
+    "@nestjs/cache-manager": "^2.1.1",
+    "@nestjs/common": "^10.2.8",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.2.8",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.2",
+    "@nestjs/platform-express": "^10.2.8",
     "@nestjs/schedule": "^4.0.0",
-    "@nestjs/swagger": "^6.3.0",
-    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/swagger": "^7.1.14",
+    "@nestjs/typeorm": "^10.0.0",
     "@types/body-parser": "^1.19.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -65,7 +67,7 @@
   "devDependencies": {
     "@nestjs/cli": "^9.3.0",
     "@nestjs/schematics": "^9.1.0",
-    "@nestjs/testing": "^9.4.0",
+    "@nestjs/testing": "^10.2.8",
     "@types/bcryptjs": "^2.4.2",
     "@types/cache-manager": "^4.0.2",
     "@types/cache-manager-redis-store": "^2.0.1",
